# obstruction-preprocessor-service

./: CMakeLists.txt  CUDAOpenCVSetupScriptUbuntu2204x86_64.sh  ProjectSetupScriptUbuntu2204x86_64.sh  ProjectSetupScriptUbuntu2204x86_64.txt  README.md  make.sh  make_run.sh
data/results/: coil-100_processed_listing.txt
design/: build_opencv.sh  cMakeBuildFile.txt  debian_cuda_config.cmake  preprocessing_activity_flow.input  services-deployment.input
src/: ChainCodingContainer.hpp  CompositeMat.cpp  CompositeMat.h  CurveLineSegmentMetaData.hpp  Direction.hpp  LGAlgorithm.hpp  LGNode.hpp  LineSegmentContainer.hpp  PossibleProblems.txt  ProjectUtilities.cpp  ProjectUtilities.h  TestFunctions.hpp  compositeMat.hpp  includes.h  kMeansNGBContainer.cpp  kMeansNGBContainer.h  kMeansNGBContainer.hpp  preprocessor  preprocessor.cpp  preprocessor.cu  preprocessorKernels.h  utility.cpp  utility.h
src/history/: BS_thread_pool.cpp  Makefile  preprocessor_GPU_build  vectorAdd.cu
